# wcps_core

./: .gitignore  LICENSE  README.md  __init__.py  pyproject.toml  setup.py
constants/: __init__.py  error_codes.py  game_constants.py  network_constants.py
database/: database.py
packets/: __init__.py  packets.py
tests/: test_database.py  test_in_packet.py  test_out_packet.py  test_packet_buffer.py
wcps_core/: constants.py  packets.py
wcps_core/constants/: game_constants.py
wcps_core/database/: authentication_server_schema.sql  game_server_schema.sql
wcps_core/datafiles/: bin_to_json.py  json_to_csv.py  map_xml_reader.py  pack_binary.py  unpack_binary.py
wcps_core/packets/: __init__.py  packets.py
