[project]
name = "wcps_core"
version = "0.0.2"
authors = [
  { name="SGMartin"},
]
description = "Core library used by other wcps packages."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/SGMartin/wcps_core"
Issues = "https://github.com/SGMartin/wcps_core/issues"